# dhc

./: .gitignore  Asm.hs  Ast.hs  Boost.hs  DHC.hs  Demo.hs  Dockerfile  Encode.hs  Hero.hs  Main.hs  Makefile  Parse.hs  README.asciidoc  README.md  SoloSyscall.hs  Std.hs  WasmOp.hs  WebDemo.hs  WebHero.hs  build.sh  default.nix  demo.html  dhc.cabal  dhc.hs  dhcdemo.lhs  example.wasm  hero.cabal  stack.yaml  wasm.hs
Hero/: Hero.hs  HeroIO.hs  Parse.hs  hero.cabal
Hero/Network/DFINITY/: Parse.hs
Hero/test/: Main.hs  bm.hs
Network/DFINITY/: Parse.hs  Parser.hs
app/: MainJs.hs
other/: Demo.hs
src/: Asm.hs  Boost.hs  DHC.hs  Parse.hs  Std.hs  dhcdemo.lhs
src/Hero/: .gitignore  Hero.hs  Parse.hs  README.asciidoc
src/Hero/test/: Main.hs
test/: Main.hs  demo.hs  rundhc.hs
util/: wrapper.js
