name:          dhc
version:       0.1.0
synopsis:      A Haskell compiler that produces WebAssembly.
license:       GPL-3
copyright:     2017 DFINITY Stiftung.
category:      Language
homepage:      https://github.com/dfinity/dhc
bug-reports:   https://github.com/dfinity/dhc/issues
build-type:    Simple
cabal-version: >=1.10

library
  build-depends:
    base,
    binary,
    bimap,
    containers,
    deepseq,
    mtl,
    parsec
  default-language:
    Haskell2010
  exposed-modules:
    Asm
    DHC
  ghc-options:
    -O2
    -Wall
