name:          dhc
version:       0.1.0
synopsis:      A Haskell compiler that produces WebAssembly.
license:       GPL-3
copyright:     2018 DFINITY Stiftung.
category:      Language
homepage:      https://github.com/dfinity/dhc
bug-reports:   https://github.com/dfinity/dhc/issues
build-type:    Simple
cabal-version: >=1.10

library
  hs-source-dirs:
    src
  build-depends:
    base,
    binary,
    bimap,
    bytestring,
    containers,
    deepseq,
    mtl,
    parsec
  default-language:
    Haskell2010
  exposed-modules:
    Asm
    DHC
    WasmOp
  ghc-options:
    -O2
    -Wall

executable dhc-js
  main-is: MainJs.hs
  hs-source-dirs:
    app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >=4.7 && <5,
    binary,
    bimap,
    bytestring,
    containers,
    deepseq,
    mtl,
    parsec,
    ghcjs-base
    , dhc
  other-modules:
    Paths_dhc
  default-language:
    Haskell2010

executable dhc-cli
  main-is: MainCli.hs
  hs-source-dirs:
    app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >=4.7 && <5,
    binary,
    bimap,
    bytestring,
    containers,
    deepseq,
    mtl,
    parsec,
    ghcjs-base
    , dhc
  other-modules:
    Paths_dhc
  default-language:
    Haskell2010

test-suite dhc-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5,
      binary,
      bimap,
      bytestring,
      containers,
      deepseq,
      mtl,
      parsec,
      ghcjs-base,
      HUnit
      , dhc
  other-modules:
      Paths_dhc
  default-language: Haskell2010
