name:          dhc
version:       0.1.0
synopsis:      A Haskell compiler that produces WebAssembly.
license:       GPL-3
copyright:     2017 DFINITY Stiftung.
category:      Language
homepage:      https://github.com/dfinity/dhc
bug-reports:   https://github.com/dfinity/dhc/issues
build-type:    Simple
cabal-version: >=1.10

library
  build-depends:
    base,
    binary,
    bytestring,
    containers,
    mtl,
    parsec
  default-language:
    Haskell2010
  exposed-modules:
    Asm
    Ast
    Boost
    DHC
    Encode
    Hero.Hero
    Hero.Parse
    Parse
    Std
    WasmOp
  ghc-options:
    -O2
    -Wall

executable dhc
  default-language:
    Haskell2010
  main-is:
    Main.hs
  other-modules:
    Asm
    Ast
    Boost
    Demo
    DHC
    Encode
    Parse
    Std
    WasmOp
  build-depends:
    base,
    binary,
    bytestring,
    containers,
    dhc,
    mtl,
    parsec
  ghc-options:
   -O2
   -Wall
   -threaded

test-suite test
  default-language:
    Haskell2010
  type: exitcode-stdio-1.0
  main-is: test/Main.hs
  build-depends:
    base,
    binary,
    bytestring,
    containers,
    dhc,
    heredoc,
    HUnit,
    mtl,
    parsec
  other-modules:
    Asm
    Ast
    Boost
    DHC
    Encode
    Parse
    SoloSyscall
    Std
    WasmOp
    Hero.Hero
    Hero.Parse
