name:          hero
version:       0.0.0
synopsis:      WebAssembly interpreter.
license:       GPL-3
license-file:  LICENSE
copyright:     2017 DFINITY Stiftung
author:        Ben Lynn <blynn@dfinity.org>
maintainer:    Ben Lynn <blynn@dfinity.org>
stability:     Experimental
category:      Interpreter
homepage:      https://github.com/dfinity/hero
bug-reports:   https://github.com/dfinity/hero/issues
build-type:    Simple
cabal-version: >=1.10

library
  build-depends:
    base,
    bytestring,
    containers,
    dhc,
    parsec
  default-language:
    Haskell2010
  exposed-modules:
    Hero.Hero
    Hero.Parse
  ghc-options:
    -O2
    -Wall
